Fixed an issue where the incorrect strength chart was pulled.

--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,4 @@ MigrationBackup/
 FodyWeavers.xsd
 /PokemonInfoHelperWinform/Resources/PokemonLogo.png
 /PokemonInfoHelperWinform/Resources/PokeBackground.jpg
+/PokemonInfoHelperWinform/Resources/pokeIcon.jpg
