--- a/PokemonInfoHelperWinform/PokemonInfoHelperWinform.csproj
+++ b/PokemonInfoHelperWinform/PokemonInfoHelperWinform.csproj
@@ -6,7 +6,14 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <PackageIcon></PackageIcon>
+    <StartupObject></StartupObject>
+    <ApplicationIcon>Resources\_3d747a31-2c39-4171-80d1-654b2417f744.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="Resources\_3d747a31-2c39-4171-80d1-654b2417f744.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
@@ -51,6 +58,10 @@
     </None>
     <None Update="Resources\PokedexGen6.csv">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\pokeIcon.jpg">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
     </None>
     <None Update="Resources\PokemonLogo.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
